k8s/app-back.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-back-deployment
  labels:
    app: app-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-back
  template:
    metadata:
      labels:
        app: app-back
    spec:
      containers:
        - name: app-back
          image: graphql-sinatra-puma
          ports:
            - containerPort: 4000

---
apiVersion: v1
kind: Service
metadata:
  name: app-back
spec:
  selector:
    app: app-back
  ports:
  - protocol: TCP
    port: 4000
