k8s/proxy-front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-front-deployment
  labels:
    app: proxy-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy-front
  template:
    metadata:
      labels:
        app: proxy-front
    spec:
      containers:
        - name: proxy-front
          image: nginx-front
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: proxy-front
spec:
  selector:
    app: proxy-front
  ports:
  - protocol: TCP
    port: 80
